--- a/frank/languages/frank.pot
+++ b/frank/languages/frank.pot
@@ -4,13 +4,35 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Frank 1.0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tags/frank\n"
-"POT-Creation-Date: 2012-12-26 14:57:05+00:00\n"
+"POT-Creation-Date: 2012-12-26 15:51:06+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "PO-Revision-Date: 2012-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+
+#: 404.php:11
+msgid "Page Not Found"
+msgstr ""
+
+#: 404.php:22
+msgctxt "home_link_text"
+msgid "home"
+msgstr ""
+
+#: 404.php:23
+msgid ""
+"Unfortunately, the page you are looking for no longer exists or never "
+"existed in the first place. If you reached this page in error, you can go %s "
+"and start over."
+msgstr ""
+
+#: 404.php:30
+msgid ""
+"If you believe this page exists, please try searching for the page in the "
+"search input below."
+msgstr ""
 
 #: admin/frank-theme-options.php:7 admin/frank-theme-options.php:124
 msgid "General Settings"
