--- a/frank/languages/sv_SE.po
+++ b/frank/languages/sv_SE.po
@@ -4,14 +4,41 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Frank 1.0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tags/frank\n"
-"POT-Creation-Date: 2012-12-26 14:57:05+00:00\n"
-"PO-Revision-Date: 2012-12-26 15:59+0100\n"
+"POT-Creation-Date: 2012-12-26 15:42:51+00:00\n"
+"PO-Revision-Date: 2012-12-26 16:56+0100\n"
 "Last-Translator: Felix Holmgren <felix@sunnyzebra.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.5.4\n"
+
+#: 404.php:11
+msgid "Page Not Found"
+msgstr "Sidan finns inte"
+
+#: 404.php:22
+msgctxt "home_link_text"
+msgid "home"
+msgstr "hem"
+
+#: 404.php:23
+msgid ""
+"Unfortunately, the page you are looking for no longer exists or never "
+"existed in the first place. If you reached this page in error, you can go %s "
+"and start over."
+msgstr ""
+"Tyvärr finns inte sidan du letar efter längre, eller så har den aldrig "
+"funnits. Om du kommit hit av misstag kan du återvända %s och börja från "
+"början."
+
+#: 404.php:30
+msgid ""
+"If you believe this page exists, please try searching for the page in the "
+"search input below."
+msgstr ""
+"Om du tror att sidan bör finnas kan du försöka söka efter den med hjälp av "
+"sökfältet här."
 
 #: admin/frank-theme-options.php:7 admin/frank-theme-options.php:124
 msgid "General Settings"
