--- a/languages/es_MX.po
+++ b/languages/es_MX.po
@@ -3,14 +3,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tags/frank\n"
 "POT-Creation-Date: 2012-12-30 12:15:56+00:00\n"
-"PO-Revision-Date: 2014-03-23 23:17-0600\n"
+"PO-Revision-Date: 2014-07-29 13:37-0600\n"
 "Last-Translator: Emmanuel Ayala Mexicano <emmanuelayalamexicano@gmail.com>\n"
 "Language-Team: \n"
 "Language: es_MX\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.6.4\n"
+"X-Generator: Poedit 1.6.5\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -375,11 +375,11 @@ msgstr "Ajustes del tema de Frank"
 
 #: partials/post-pagination.php:8
 msgid "Older Entries"
-msgstr "Entradas más antigüas"
+msgstr "Entradas antiguas"
 
 #: partials/post-pagination.php:11
 msgid "Newer Entries"
-msgstr "Entradas más recientes"
+msgstr "Entradas recientes"
 
 #: partials/comments/commentform.php:20
 #, php-format
