--- a/languages/es_MX.po
+++ b/languages/es_MX.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tags/frank\n"
 "POT-Creation-Date: 2012-12-30 12:15:56+00:00\n"
-"PO-Revision-Date: 2014-07-29 13:37-0600\n"
+"PO-Revision-Date: 2014-07-29 16:55-0600\n"
 "Last-Translator: Emmanuel Ayala Mexicano <emmanuelayalamexicano@gmail.com>\n"
 "Language-Team: \n"
 "Language: es_MX\n"
@@ -375,7 +375,7 @@ msgstr "Ajustes del tema de Frank"
 
 #: partials/post-pagination.php:8
 msgid "Older Entries"
-msgstr "Entradas antiguas"
+msgstr "Entradas anteriores"
 
 #: partials/post-pagination.php:11
 msgid "Newer Entries"
